# ironverse-prototype-2-founder-leaderboard

./: .env  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: docker-image.yml  docker.yml
assets/: answer_form.html  current_points.html  leaderboard.html  question_footer.html
migrations/: 20210514052418_create_table.down.sql  20210514052418_create_table.up.sql
src/: main.rs
